k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
      - ticketing.test
      secretName: default-server-secret
  rules:
  - host: ticketing.test
    http:
      paths:
        - path: /api/users/?(.*)
          pathType: Prefix
          backend:
            service:
              name: auth-srv
              port:
                number: 80
